--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <div class="logo-font mb-4">Shopping Bag</div>
+            <div class="logo-font mb-4">Checkout</div>
             <hr>
         </div>
     </div>
